============
Five Changes
============

Five 1.4.3 (unreleased)
=======================

Bugfixes
--------

* View methods which aren't explicitly declared as allowed must be marked
  private explicitly to avoid being web publishable.

* site/metaconfigure: Local site hook now only applied once per class, so
  multiple <five:localsite> tags for the same class won't cause config
  errors.

Five 1.4.2 (2006-11-04)
=======================

Bugfixes
--------

* browser: processInputs now decodes strings in lists and tuples.

* formlib: Removed redundant subpageform.pt and backported pageform.pt fixes
  from Zope 3. Added missing error view and i18n configuration.

  This change requires Zope 2.9.5 or higher.

* Made the __call__ method of ViewMixinForAttributes have the same signature
  as the original attribute.  This aids some pathological request parameter
  marshalling.

* Backported Zope 2.10's pythonproducts zope app handling to help resolve
  an issue with ConnectionStateError's.

* Port code from Zope 3 making resource directories recursive.
  Thanks to Richard Waid.


Five 1.4.1 (2006-08-13)
=======================

Bugfixes
--------

* Allow multiple uses of the <class>/<content> directive.

* Fix problem with WebDAV/HEAD requests due to new traversal order.

* Made the pythonproducts monkey patching more robust by checking to
  ensure patches aren't reapplied and cleaning up after itself.

* Backported the new traversal lookup order from Zope 2.10 (attribute, adapter,
  acquired attribute).

* Made the provider directive acquisition wrap the resultant content provider
  so that simple providers that need security declarations (e.g. those that
  render pagetemplates) can work with the Zope 2 security machinery.

* Added acquisition wrappers to viewlets before updating or rendering.

Restructuring
-------------

* Enabled the viewlet related directives by default.

* Added Five.browser.pagetemplatefile.ViewPageTemplateFile as an alias